fixed some spacing on home page

--- a/frontend/src/store.css
+++ b/frontend/src/store.css
@@ -197,3 +197,7 @@
     background-color: #F1BE48;
     padding-top: 1px;
 }
+
+.homeStoreName {
+    margin-left: 20px;
+}
